--- a/NewsFeed/NewsFeed.csproj
+++ b/NewsFeed/NewsFeed.csproj
@@ -271,23 +271,23 @@
     <Content Include="Scripts\Plugins\rssChannelPanel.js" />
     <Content Include="Scripts\Plugins\rssDeleteFeedDialog.js" />
     <Content Include="Scripts\Plugins\rssFeedListPanel.js" />
-    <Content Include="Views\Account\ChangePassword.aspx" />
-    <Content Include="Views\Account\ChangePasswordSuccess.aspx" />
-    <Content Include="Views\Account\LogOn.aspx" />
-    <Content Include="Views\Account\Register.aspx" />
-    <Content Include="Views\Feed\Add.aspx" />
-    <Content Include="Views\Feed\AddFeedForm.ascx" />
-    <Content Include="Views\Feed\BlankState.ascx" />
-    <Content Include="Views\Feed\ChannelPanel.ascx" />
-    <Content Include="Views\Feed\Delete.aspx" />
-    <Content Include="Views\Feed\DeleteFeedForm.ascx" />
-    <Content Include="Views\Feed\FeedList.ascx" />
-    <Content Include="Views\Feed\Index.aspx" />
-    <Content Include="Views\Feed\NotFound.aspx" />
-    <Content Include="Views\Home\About.aspx" />
-    <Content Include="Views\Home\Index.aspx" />
-    <Content Include="Views\Shared\Error.aspx" />
-    <Content Include="Views\Shared\LogOnUserControl.ascx" />
+    <Content Include="Views\Account\ChangePassword.cshtml" />
+    <Content Include="Views\Account\ChangePasswordSuccess.cshtml" />
+    <Content Include="Views\Account\LogOn.cshtml" />
+    <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Feed\Add.cshtml" />
+    <Content Include="Views\Feed\AddFeedForm.cshtml" />
+    <Content Include="Views\Feed\BlankState.cshtml" />
+    <Content Include="Views\Feed\ChannelPanel.cshtml" />
+    <Content Include="Views\Feed\Delete.cshtml" />
+    <Content Include="Views\Feed\DeleteFeedForm.cshtml" />
+    <Content Include="Views\Feed\FeedList.cshtml" />
+    <Content Include="Views\Feed\Index.cshtml" />
+    <Content Include="Views\Feed\NotFound.cshtml" />
+    <Content Include="Views\Home\About.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Shared\Error.cshtml" />
+    <Content Include="Views\Shared\LogOnUserControl.cshtml" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -299,8 +299,9 @@
     </Content>
     <Content Include="Views\Shared\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Shared\Site.Master" />
     <Content Include="Views\Web.config" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <None Include="Views\Shared\SiteOld.MasterOld" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -343,6 +344,11 @@
         </WebProjectProperties>
       </FlavorProperties>
     </VisualStudio>
+    <MonoDevelop>
+      <Properties>
+        <XspParameters Port="8080" Address="127.0.0.1" SslMode="None" SslProtocol="Default" KeyType="None" CertFile="" KeyFile="" PasswordOptions="None" Password="" Verbose="True" />
+      </Properties>
+    </MonoDevelop>
   </ProjectExtensions>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
