--- a/NewsFeed/NewsFeed.csproj
+++ b/NewsFeed/NewsFeed.csproj
@@ -301,7 +301,7 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <None Include="Views\Shared\SiteOld.MasterOld" />
+    <Content Include="Views\Feed\SearchFeed.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
