--- a/NewsFeed/Web.config
+++ b/NewsFeed/Web.config
@@ -40,8 +40,8 @@
         </roleManager>
   </system.web>
   <connectionStrings>
-    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
-    <add name="RSSReaderConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\RSSReader.mdf;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient"/>
+    <add name="ApplicationServices" connectionString="data source=(LocalDB)\MSSQLLocalDB;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;" providerName="System.Data.SqlClient"/>
+    <add name="RSSReaderConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\RSSReader.mdf;Integrated Security=True;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
